# pygeometry

./: CMakeLists.txt  README.md  pyproject.toml  test.py
.github/workflows/: publish.yml
src/pycglib/: __init__.py  wrapper.cpp
src/pycglib/core/: bbox2.cpp  direction3.cpp  direction3.h  global_functions.cpp  global_functions.h  iso_cuboid3.cpp  iso_cuboid3.h  iso_rectangle2.cpp  iso_rectangle2.h  line2.cpp  line2.h  line3.cpp  line3.h  orientation.cpp  orientation.h  plane3.cpp  plane3.h  point3.cpp  point3.h  points.cpp  points.h  polygon2.cpp  polygon2.h  ray3.cpp  ray3.h  regular_triangulation2.cpp  regular_triangulation2.h  segment3.cpp  segment3.h  sphere3.cpp  sphere3.h  triangulation2.cpp  triangulation2.h  types.h  weighted_point2.cpp  weighted_point2.h
src/pycglib/distance/: distance.cpp
src/pygeometry/: __init__.py
