[build-system]
requires = [
    "scikit-build-core>=0.9",
    "pybind11>=2.12",
]
build-backend = "scikit_build_core.build"

[project]
name = "pygeometry"
version = "0.1.14"
description = "Python bindings for CGAL - Computational Geometry Algorithms Library"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Mukilan", email = "your-email@example.com"}
]
keywords = ["CGAL", "geometry", "computational geometry", "pybind11"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/armukilan/pygeometry"
Repository = "https://github.com/armukilan/pygeometry"
Issues = "https://github.com/armukilan/pygeometry/issues"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/pygeometry"]
install.components = ["python_modules"]

[tool.scikit-build.cmake.define]
CMAKE_INSTALL_PREFIX = ""
CMAKE_TOOLCHAIN_FILE = "C:/vcpkg/scripts/buildsystems/vcpkg.cmake"
CGAL_DIR = "C:/vcpkg/installed/x64-windows/share/cgal"