[build-system]
requires = [
    "scikit-build-core>=0.9",
    "pybind11>=2.12",
]
build-backend = "scikit_build_core.build"

[project]
name = "pycglib"
version = "0.1.24"
description = "Python bindings for CGAL - Computational Geometry Algorithms Library"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Mukilan", email = "mukilanar998@gmail.com"}
]
keywords = ["CGAL", "geometry", "computational geometry", "pybind11"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    # "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/armukilan/pycglib"
Repository = "https://github.com/armukilan/pycglib"
Issues = "https://github.com/armukilan/pycglib/issues"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/pycglib"]
install.components = ["python_modules"]

[tool.scikit-build.cmake.define]
CMAKE_INSTALL_PREFIX = ""